# (c) Copyright 2019-2025 OLX
# (c) Copyright 2025 mrdkprj
[package]
name = "libvips-bindings"
description = "File used for the generation of bindings for libvips from C"
version = "0.0.2" # not used
authors = [
  "Andrew Basson <andrew.basson@olx.com>",
  "Bogdan Vidrean <bogdan.vidrean@olx.com>",
]
edition = "2021"

[build-dependencies]
bindgen = "0.69.2"
Inflector = "0.11.4"
cc = "1.0.83"
which = "6.0.0"

[dependencies]
num-traits = "0.2.19"
num-derive = "0.4.2"